/// Please use the following editor setup for this file:

// Tab size=2; Tabs as spaces; Clean up trailing whitepsace
// 'make proto' will run clang-format to fix formatiing
syntax = "proto3";
package watchdog;

option go_package = "github.com/binuud/watchdog/gen/go/v1/watchdog";

// import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message DomainItem {

  string uuid = 1;
  // eg: www.google.com, can be any subdomain too
  string name = 2;
  // eg: google.com
  string domainName = 3;
  repeated string endpoints = 4;
}

message DomainWatch {
  // for display purpose
  // in future we can have multiple watch lists
  string name = 1;
  // interval in seconds
  int64 refreshInterval = 2;
  repeated DomainItem domains = 11;
}

message EndpointStatus {
  string endpoint = 1;
  int64 statusCode = 3;
}

message CertificateStatus {
  enum EnumCertStatus {
    EnumCertStatusIgnore = 0;
    Valid = 1;
    Expiring = 2;
    // when certificate is for a different domain
    WrongCertificate = 3;
  }
  EnumCertStatus status = 1;
  bool certValid = 2;
  // time in seconds when the certificates expire
  int64 certExpiry = 3;
}

// summary message, which can be used to display summary
// of domain items on Cli or any UI
message DomainSummary {
  // domainItem is duplicated here
  // for easier summarization api
  // and client can just get the summary data from a single call
  DomainItem domain = 1;
  // is the root url reachable
  bool reachable = 2;
  // does the domain name resolv to an ip
  bool resolvable = 3;
  repeated CertificateStatus certsStatus = 4;

  google.protobuf.Timestamp createdAt = 10;
  // we expect http requests to be redirected to https
  bool httpsRedirect = 11;
  // total number of endpoints configured by the user
  int64 numEndpoints = 21;
  // number of endpoints with a success HTTP response code
  int64 validEndpoints = 22;
  // number of resolvable ip
  int64 numIp = 23;
  // number of certs associated with domain
  int64 numCerts = 24;
  int64 numValidCerts = 25;
  int64 numExpiringCerts = 26;
  // in all the certificates, what is the least expiring days
  // if there are 3 certiciates cert1 in 10 days, cert2 in 2 days, cert 3 in 100
  // days, then leastExpiryInDays will be 2 days
  int64 leastCertExpiryInDays = 27;
  // number of who is updates in last one month
  int64 numWhoIsUpdates = 31;
  bool whoIsMutated = 32;
  // when was whois data modified
  int64 whoIsMutatedAt = 33;
  int64 whoIsMutatedDays = 34;
  // set to true when domain is expiring in 10 days
  bool domainExpiring = 35;
  // time in seconds when the domain expire
  int64 domainExpiryAt = 36;
  int64 domainExpiryDays = 37;
}

// decsriptive information about the domains
message DomainInfo {
  repeated string ipAddresses = 1;
  // any field is not supported when created openApi swagger file
  repeated bytes certificates = 2;
  repeated EndpointStatus endpointStatuses = 3;
  string whois = 4;
  google.protobuf.Timestamp createdAt = 5;
}

// used for persisting domain information
message DomainRow {
  DomainItem domain = 1;
  DomainInfo info = 2;
  DomainSummary summary = 3;
  google.protobuf.Timestamp createdAt = 11;
}